--- a/index.html
+++ b/index.html
@@ -1,32 +1,218 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Volumen</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Calculadora de Volumen</title>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#007bff">
+<style>
+  * { box-sizing: border-box; margin: 0; padding: 0; }
+
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #e0f7fa, #ffffff);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    transition: background 0.3s, color 0.3s;
+  }
+
+  .container {
+    background: #fff;
+    padding: 30px 25px;
+    border-radius: 15px;
+    max-width: 400px;
+    width: 100%;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    transition: background 0.3s, box-shadow 0.3s;
+  }
+
+  h2 {
+    text-align: center;
+    color: #007bff;
+    margin-bottom: 20px;
+  }
+
+  p {
+    text-align: center;
+    color: #555;
+    margin-bottom: 25px;
+  }
+
+  label {
+    display: block;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    font-weight: 600;
+    color: #333;
+  }
+
+  input[type="number"] {
+    width: 100%;
+    padding: 12px;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    transition: border 0.2s, background 0.3s, color 0.3s;
+  }
+
+  input[type="number"]:focus {
+    border-color: #007bff;
+    outline: none;
+  }
+
+  button {
+    width: 100%;
+    padding: 14px;
+    margin-top: 25px;
+    border: none;
+    border-radius: 12px;
+    background: #007bff;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+
+  button:hover {
+    background: #0056b3;
+  }
+
+  #resultado {
+    margin-top: 30px;
+    padding: 20px;
+    background: #e3f2fd;
+    border-radius: 12px;
+    font-weight: bold;
+    text-align: center;
+    display: none;
+    color: #007bff;
+    font-size: 18px;
+  }
+
+  /* 🌙 Botón de modo oscuro */
+  #modoBtn {
+    margin-top: 20px;
+    background: transparent;
+    border: 2px solid #007bff;
+    color: #007bff;
+    font-size: 16px;
+    border-radius: 10px;
+    padding: 10px;
+    width: 100%;
+    cursor: pointer;
+    transition: all 0.3s;
+  }
+
+  #modoBtn:hover {
+    background: #007bff;
+    color: white;
+  }
+
+  /* 🌑 Estilos del modo oscuro */
+  body.dark {
+    background: linear-gradient(135deg, #1e1e1e, #121212);
+    color: #f5f5f5;
+  }
+
+  body.dark .container {
+    background: #1f1f1f;
+    box-shadow: 0 10px 25px rgba(255,255,255,0.1);
+  }
+
+  body.dark h2 {
+    color: #4da3ff;
+  }
+
+  body.dark p, 
+  body.dark label {
+    color: #ddd;
+  }
+
+  body.dark input[type="number"] {
+    background: #2c2c2c;
+    border: 1px solid #555;
+    color: #f5f5f5;
+  }
+
+  body.dark #resultado {
+    background: #2c2c2c;
+    color: #4da3ff;
+  }
+
+  body.dark #modoBtn {
+    border-color: #4da3ff;
+    color: #4da3ff;
+  }
+
+  body.dark #modoBtn:hover {
+    background: #4da3ff;
+    color: black;
+  }
+</style>
 </head>
 <body>
-    <div class="container">
-        <h2>Calculadora de Volumen</h2>
 
-        <label for="largo">Largo (cm):</label>
-        <input type="number" id="largo" placeholder="Ej. 10">
+<div class="container">
+  <h2>⚙️ Calculadora de Volumen</h2>
+  <p>Calcula el volumen de rodillos en pulgadas.</p>
 
-        <label for="ancho">Ancho (cm):</label>
-        <input type="number" id="ancho" placeholder="Ej. 5">
+  <form name="Testing">
+    <label>Diámetro interior (pulgadas)</label>
+    <input type="number" step="0.01" name="d1" placeholder="Ej. 10.5">
 
-        <label for="alto">Alto (cm):</label>
-        <input type="number" id="alto" placeholder="Ej. 4">
+    <label>Diámetro exterior (pulgadas)</label>
+    <input type="number" step="0.01" name="d2" placeholder="Ej. 12.0">
 
-        <button onclick="calcularVolumen()">Calcular</button>
+    <label>Largo del rodillo (pulgadas)</label>
+    <input type="number" step="0.01" name="a" placeholder="Ej. 50.0">
 
-        <h3 id="resultado"></h3>
+    <button type="button" onclick="addval()">Calcular</button>
+  </form>
 
-        <!-- Dark mode toggle -->
-        <button id="modoBtn" class="modo-toggle" onclick="toggleModo()">🌙 Modo Oscuro</button>
-    </div>
+  <div id="resultado"></div>
 
-    <script src="script.js"></script>
+  <button id="modoBtn" onclick="toggleModo()">🌙 Modo oscuro</button>
+</div>
+
+<script>
+function addval() {
+  const d1 = Number(document.Testing.d1.value);
+  const d2 = Number(document.Testing.d2.value);
+  const a = Number(document.Testing.a.value);
+
+  const d1_sq = d1 * d1;
+  const d2_sq = (d2 + 0.5) * (d2 + 0.5);
+  const vol2 = d2_sq - d1_sq;
+  const vol = (vol2 * 0.017) * (a + 1);
+
+  const resultado = document.getElementById("resultado");
+  resultado.innerText = `Volumen: ${vol.toFixed(3)} pulgadas³`;
+  resultado.style.display = "block";
+}
+
+// 🌓 Alternar y guardar modo oscuro
+function toggleModo() {
+  document.body.classList.toggle("dark");
+  const isDark = document.body.classList.contains("dark");
+  localStorage.setItem("modoOscuro", isDark);
+  const btn = document.getElementById("modoBtn");
+  btn.textContent = isDark ? "☀️ Modo claro" : "🌙 Modo oscuro";
+}
+
+// 🌗 Al cargar, aplicar el modo guardado
+window.addEventListener("DOMContentLoaded", () => {
+  const modoGuardado = localStorage.getItem("modoOscuro") === "true";
+  if (modoGuardado) {
+    document.body.classList.add("dark");
+    document.getElementById("modoBtn").textContent = "☀️ Modo claro";
+  }
+});
+</script>
+
 </body>
 </html>
